--- a/index.html
+++ b/index.html
@@ -4,42 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <title>Practica HTML CSS keepcoding</title>
-
-    <style>
-        .formulario {
-            border: 1px solid red;
-            height: 100vh;
-            display: grid;
-            align-items: center;
-            justify-content: center;
-
-        }
-
-        .formulario form {
-            display: flex;
-            flex-direction: column;
-            max-width: 300px;
-
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Netflix?</title>
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
 <body>
 
-    <main>
-        <div class="formulario">
-            <form action="get">
-                <label>nombre</label>
-                <input type="text">
-                <label>Apellidos</label>
-                <input type="text">
-                <button>Entrar</button>
-            </form>
+    <header class="site-header">
+        <img src="assets/img/logo.jpeg" alt="logotipo" class="logotipo">
+    </header>
+
+    <main class="formulario-login contenedor">
+
+        <form action="principal.html">
+            <legend>Inicia sesión</legend>
+            <div class="campo">
+                <input type="text" id="usuario">
+                <label>Email o número de teléfono</label>
+            </div>
+            <div class="campo">
+                <input type="password" id="password">
+                <label>Contraseña</label>
+
+            </div>
+            <div class="submit">
+                <input type="submit" value="Iniciar sesión">
+            </div>
+
+            <div class="acciones">
+                <div class="recuerdame">
+                    <input type="checkbox">
+                    <label>Recuérdame</label>
+                </div>
+
+                <div class="ayuda">
+                    <a href="#">¿Necesitas ayuda?</a>
+                </div>
+            </div>
+            <!--acciones-->
+        </form>
+
+        <div class="contenido-inferior">
+            <a href="#">Iniciar sesión con facebook</a>
+            <p class="nuevo-usuario">
+                ¿Primera vez en Netflix? <a href="#">Suscríbete ya</a>
+            </p>
         </div>
     </main>
 
+    <footer class="site-footer">
+        <div class="contenedor">
+            <p>¿Preguntas? Llama al 01800-265-0161</p>
+
+            <nav class="menu-footer">
+                <a href="#">Términos de las tarjetas de regalo</a>
+                <a href="#">Términos de uso</a>
+                <a href="#">Declaración de privacidad</a>
+            </nav>
+
+            <select class="lenguaje">
+                <option value="eng">English</option>
+                <option value="esp">Español</option>
+            </select>
+        </div>
+        <!--contenedor-->
+    </footer>
 
 </body>
 
